correcting git repo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
   <!-- Footer -->
   <footer>
-  <a href="https://github.com/dheerajreddy33" target="_blank"> Github repo.</a>
+  <a href="https://github.com/dheerajkandiga" target="_blank"> Github repo.</a>
     <p style="float: 'left'">© 2020 Profile of DheerajReddy</p>
   </footer>
 
