--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
             and where I'm headed! Feel free to <a routerLink="/contactDetails"> React out </a> if you have any comments or suggestions!
         </p>
         <p style="padding-top: 20px;" class="data">To know more about my projects I worked on spare time. Here is the 
-            <a href="https://github.com/dheerajreddy33" target="_blank"> github repoLink.</a>
+            <a href="https://github.com/dheerajkandiga" target="_blank"> github repoLink.</a>
         </p>
     </div>
 </div>
